# SPARC

./: .gitignore  CHANGELOG  LICENSE  README.md  docker-compose-server.yml  docker-compose.prod.yml  docker-compose.yml  download_sparc.sh  manuel_tests.md  package-lock.json  run_server.sh
backend/: .dockerignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/app/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/app/consumers/: disruption_consumer.py  order_consumer.py  resource_consumer.py  worker_consumer.py
backend/app/migrations/: 0001_initial.py  0002_process_name_process_resource_and_more.py  0003_disruption_process.py  0004_remove_disruption_end_date_and_more.py  0005_rename_process_order_processes_and_more.py  0006_remove_order_bill_of_materials_remove_order_files_and_more.py  0007_remove_disruption_duration_remove_order_processes_and_more.py  0008_alter_order_order_number.py  0009_alter_disruption_id_alter_disruptiontype_id_and_more.py
backend/app/serializers/: disruption_serializer.py  disruption_type_serializer.py  order_file_serializer.py  order_serializer.py  part_serializer.py  process_serializer.py  resource_serializer.py  resource_type_serializer.py  worker_serializer.py
backend/app/tests/: conftest.py  test_config.py  test_models.py  test_views.py
backend/app/views/: __init__.py  (+6 more)
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: generate_test_data.py
backend/sparc/: asgi.py  settings.py  urls.py  wsgi.py
(+94 files in other folders)
